--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-es6-rest-api",
+  "name": "e-commerce-api",
   "version": "0.3.0",
   "description": "Starter project for an ES6 RESTful Express API",
   "main": "dist",
@@ -12,6 +12,7 @@
   },
   "eslintConfig": {
     "extends": "eslint:recommended",
+    "parser": "babel-eslint",
     "parserOptions": {
       "ecmaVersion": 7,
       "sourceType": "module"
@@ -28,6 +29,7 @@
   "author": "Matt Hawryszko <matthawryszko@gmail.com.ca>",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.13.3",
     "compression": "^1.5.2",
@@ -39,11 +41,13 @@
     "nexmo": "^2.4.1",
     "resource-router-middleware": "^0.6.0",
     "save": "^2.3.3",
-    "validator": "^10.11.0"
+    "validator": "^10.11.0",
+    "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {
     "babel-cli": "^6.9.0",
     "babel-core": "^6.9.0",
+    "babel-eslint": "^10.0.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-0": "^6.5.0",
     "eslint": "^3.1.1",
