--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist",
   "scripts": {
     "dev": "nodemon -w src --exec \"babel-node src --presets es2015,stage-0\"",
+    "db": "./mongodb/bin/mongod --dbpath=mongodb-data",
     "build": "babel src -s -D -d dist --presets es2015,stage-0",
     "start": "node dist",
     "prestart": "npm run -s build",
@@ -35,10 +36,13 @@
     "compression": "^1.5.2",
     "cors": "^2.8.5",
     "express": "^4.13.3",
+    "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.4.21",
     "morgan": "^1.8.0",
+    "multer": "^1.4.1",
     "nexmo": "^2.4.1",
+    "path": "^0.12.7",
     "resource-router-middleware": "^0.6.0",
     "save": "^2.3.3",
     "validator": "^10.11.0",
